--- a/LibraryManagement/LibraryManagement/wwwroot/css/site.css
+++ b/LibraryManagement/LibraryManagement/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-/*html {
+html {
   font-size: 14px;
 }
 
@@ -14,8 +14,9 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
-}*/
+    margin-bottom: 60px;
+    background-color: #f8f9fa;
+}
 
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
 
@@ -37,7 +38,7 @@ body {
 body {
     position: relative;
     margin: var(--header-height) 0 0 0;
-    padding: 0 1rem;
+    padding: 0 0rem;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     transition: .5s
@@ -57,7 +58,7 @@ a {
     align-items: center;
     justify-content: space-between;
     padding: 0 1rem;
-    background-color: var(--white-color);
+    background-color: #e9ecef;
     z-index: var(--z-fixed);
     transition: .5s
 }
@@ -191,7 +192,7 @@ a {
 @media screen and (min-width: 768px) {
     body {
         margin: calc(var(--header-height) + 1rem) 0 0 0;
-        padding-left: calc(var(--nav-width) + 2rem)
+        padding-left: calc(var(--nav-width) + 0rem)
     }
 
     .header {
