--- a/LibraryManagement/LibraryManagement/Views/Shared/_Layout.cshtml
+++ b/LibraryManagement/LibraryManagement/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
             <div>
                 <a href="#" class="nav_logo">
                     <i class='bx bx-layer nav_logo-icon'></i>
-                    <span class="nav_logo-name">BBBootstrap</span>
+                    <span class="nav_logo-name">Library</span>
                 </a>
                 <hr style="color:white" />
                 <div class="nav_list">
